connected with the AWS DB form Local WSL server

--- a/src/.env
+++ b/src/.env
@@ -1,19 +1,27 @@
 # enviroment name
 NODE_ENV = prod
 
-# DB Configurations
-DB_HOST              = maindatabase.cgrxb7qxgahh.me-south-1.rds.amazonaws.com
-DB_HOST_READ_REPLICA = maindatabase.cgrxb7qxgahh.me-south-1.rds.amazonaws.com
-DB_USER              = admin
-DB_PASS              = "Ne*Y#kjroie7knslke>???WFJ"
-DB_DATABASE          = afghanpaydb
+# # DB Configurations
+# DB_HOST              = maindatabase.cgrxb7qxgahh.me-south-1.rds.amazonaws.com
+# DB_HOST_READ_REPLICA = maindatabase.cgrxb7qxgahh.me-south-1.rds.amazonaws.com
+# DB_USER              = admin
+# DB_PASS              = "Ne*Y#kjroie7knslke>???WFJ"
+# DB_DATABASE          = afghanpaydb
 
+# ==================updated cridintials=============================
+# DB Configurations
+DB_HOST              = 'maindatabase.cgrxb7qxgahh.me-south-1.rds.amazonaws.com',
+DB_HOST_READ_REPLICA = 'maindatabase.cgrxb7qxgahh.me-south-1.rds.amazonaws.com',
+DB_USER              = 'admin',
+DB_PASS              = 'Ne*Y#kjroie7knslke>???WFJ',
+DB_DATABASE          = afghanpaydb
 # local runtime configs
 PORT        = 5000
 SECRET_JWT  = supersecret
 
 # redis Configurations
-REDIS_HOST     = 10.252.252.7
+# REDIS_HOST     = 10.252.252.7
+REDIS_HOST     =  127.0.0.1
 REDIS_PORT     = 6379
 REDIS_PASS     = 
 REDIS_DB       = 
