--- a/.env
+++ b/.env
@@ -1,13 +1,14 @@
 # enviroment name
 NODE_ENV = prod
 
-# DB Configurations
 # DB Configurations in ALEF Technolgy servers
 DB_HOST              = 172.28.28.101
 DB_HOST_READ_REPLICA = 172.28.28.102
-DB_USER              = root         
+DB_USER              = root
 DB_PASS              = AFP@#$Devel0per
-DB_DATABASE          = afghanpaydb    
+DB_DATABASE          = afghanpaydb
+
+# ==================updated cridintials=============================
 
 # local runtime configs
 PORT        = 5000
@@ -23,12 +24,10 @@ REDIS_DB       =
 RABBITMQ_HOST = 172.28.28.105
 RABBITMQ_PORT = 5672
 RABBITMQ_USER = myadmin
-RABBITMQ_PASS = myadmin
+RABBITMQ_PASS = myadmin 
+
 # rabbitmq Configurations
-
 CLOUDAMQP_URL = amqp://myadmin:myadmin@172.28.28.105:5672/
-
-
 
 # admin defalt passwords
 ADMIN_DEFAULT_PASSWORD = 000000 
@@ -93,7 +92,7 @@ NODE_CRON_INACTIVE_AGENT_DAY = 30
 NODE_CRON_REWARD_DISTRIBUTION = 1 1 1 * *
 
 # per page record count
-PER_PAGE_COUNT = 20
+PER_PAGE_COUNT = 10
 
 # start script =  pm2 start src/server.js --watch --name="/src" --ignore-watch="/src/uploads"
 # test folder location = cd /var/www/testapi1_afghanpay.com
@@ -103,10 +102,10 @@ ETISALAT_ROLLBACK_API = 'http://172.31.2.15:3004/api/v1/etisalat/rollback'
 ETISALAT_BALANCE_CHECK_API = 'http://172.31.2.15:3004/api/v1/etisalat/customer/balance'
 
 # Rabbit mq worker
-START_RABBIT_MQ_WORKER = 0
+START_RABBIT_MQ_WORKER = 1
 
 # node cron worker
-START_NODE_CRON_WORKER = 0
+START_NODE_CRON_WORKER = 1
 
 # time out form sql query
 SQL_QUERY_TIME_OUT = 60000
