--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "amqplib": "^0.8.0",
     "aws-sdk": "^2.1009.0",
     "axios": "^0.21.4",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "crypto-random-string": "^4.0.0",
     "dotenv": "^9.0.2",
