--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
     "express-validator": "^6.11.1",
+    "fast-csv": "^5.0.2",
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
