--- a/src/.env
+++ b/src/.env
@@ -110,6 +110,9 @@ START_NODE_CRON_WORKER = 1
 # time out form sql query
 SQL_QUERY_TIME_OUT = 60000
 
+THE_DOMAIN_NAME = https://newtopuptest.afghan-pay.com
+THE_COMPANY_NAME = Afghan-Pay
+
 # wrong password attepmpts
 WRONG_PASSWORD_ATTEMPTS = 5
 
