--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "aes256": "^1.1.0",
     "amqplib": "^0.8.0",
     "aws-sdk": "^2.1009.0",
-    "axios": "^0.21.4",
+    "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "crypto-random-string": "^4.0.0",
@@ -26,7 +26,8 @@
     "express-validator": "^6.11.1",
     "fast-csv": "^5.0.2",
     "helmet": "^4.6.0",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "multer": "^1.4.2",
     "mysql2": "^3.14.0",
     "node-cron": "^3.0.0",
@@ -35,7 +36,8 @@
     "redis": "^3.1.2",
     "redis-connection-pool": "^1.7.4",
     "request": "^2.88.2",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "eslint": "^7.26.0",
