some unused files are commited, and language query function issue is fiexd 2

--- a/.env
+++ b/.env
@@ -59,10 +59,10 @@ OTP_EXPIRATION_IN_MIN = 60
 AGENT_NO_ACTIVITY = 15 
 
 #AWS variable
-AWS_KEY = AKIAQECTNYAWS4F6HHAP
-AWS_SECRET = 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
-AWS_BUCKET = afptesting
-AWS_PATH = https://afptesting.s3.amazonaws.com/
+# AWS_KEY = AKIAQECTNYAWS4F6HHAP
+# AWS_SECRET = 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
+# AWS_BUCKET = afptesting
+# AWS_PATH = https://afptesting.s3.amazonaws.com/
 
 #log url
 LOG_URL = http://localhost:5000 
