in this stage we are able to perform TopUp to 511 via 515 route and tested successfully

--- a/.env
+++ b/.env
@@ -112,3 +112,7 @@ SQL_QUERY_TIME_OUT = 60000
 
 # wrong password attepmpts
 WRONG_PASSWORD_ATTEMPTS = 5
+
+
+
+ERS_511_BASE_URL = 'https://testapi1.afghan-pay.com/api/v1'
