removed some un-used codes

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 .node_modules
 # Snyk Security Extension - AI Rules (auto-generated)
 .github/instructions/snyk_rules.instructions.md
+/src/testCompany
