--- a/.env
+++ b/.env
@@ -1,118 +1,210 @@
-# enviroment name
-NODE_ENV = prod
+# # enviroment name
+# NODE_ENV = prod
 
-# DB Configurations in ALEF Technolgy servers
-DB_HOST              = 172.28.28.101
-DB_HOST_READ_REPLICA = 172.28.28.102
-DB_USER              = root
-DB_PASS              = AFP@#$Devel0per
-DB_DATABASE          = afghanpaydb
+# # DB Configurations in ALEF Technolgy servers
+# DB_HOST              = 172.28.28.101
+# DB_HOST_READ_REPLICA = 172.28.28.102
+# DB_USER              = root
+# DB_PASS              = AFP@#$Devel0per
+# DB_DATABASE          = afghanpaydb
 
-# ==================updated cridintials=============================
+# # ==================updated cridintials=============================
+
+# # local runtime configs
+# PORT        = 5000
+# SECRET_JWT  = supersecret
+
+# # redis Configurations
+# REDIS_HOST     = 172.28.28.106
+# REDIS_PORT     = 6379
+# REDIS_PASS     = 
+# REDIS_DB       = 
+
+# #RabitMQ configuration vars
+# RABBITMQ_HOST = 172.28.28.105
+# RABBITMQ_PORT = 5672
+# RABBITMQ_USER = myadmin
+# RABBITMQ_PASS = myadmin 
+
+# # rabbitmq Configurations
+# CLOUDAMQP_URL = amqp://myadmin:myadmin@172.28.28.105:5672/
+
+# # admin defalt passwords
+# ADMIN_DEFAULT_PASSWORD = 000000 
+
+# # admin defalt id and er_login_uuid
+# USER_id = 1 
+# USER_UUID = 5ad59565-cd7c-11 
+
+# #agnet default operator and operator id
+# operatorName = Salam
+# operator_uuid = 1e0e1eeb-c2a6-11
+
+# #session variables
+# SESSION_TIME = 7d
+
+# #recharge time limit in min
+# RECHARGE_TIME_LIMIT = 5 
+
+# #stock transfer time limit in min
+# STOCK_TRANSFER_TIME_LIMIT = 5 
+
+# # emoney time limit in min
+# EMONEY_TIME_LIMIT = 15
+
+# #otp expiration in minutes
+# OTP_EXPIRATION_IN_MIN = 60 
+
+# #Agent with no activity 15 days
+# AGENT_NO_ACTIVITY = 15 
+
+# #AWS variable
+# # AWS_KEY = AKIAQECTNYAWS4F6HHAP
+# # AWS_SECRET = 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
+# # AWS_BUCKET = afptesting
+# # AWS_PATH = https://afptesting.s3.amazonaws.com/
+
+# #log url
+# LOG_URL = http://localhost:5000 
+
+# # console log sql query
+# CONSOLE_LOG = 0
+
+# # testing balacne for mno
+# MNO_TEST_BALANCE = 0
+
+# # USSD
+# AFP_USSD_PASSWORD = *AFP*USSD*code#
+
+# #other api password
+# API_PASSWORD = AFP@API109user
+
+# # P2A sesstion time 60 * 5 min
+# P2A_SESSION_TIME = 300   
+
+# # node cron deactiva agent in every 10 day if no activity found
+# NODE_CRON_INACTIVE_AGENT_SCHADULE = 10 0 * * *
+
+# # node cron deactive agent check date range
+# NODE_CRON_INACTIVE_AGENT_DAY = 30
+
+# # Reward distribution evey monty At 01:01 on day-of-month 1
+# NODE_CRON_REWARD_DISTRIBUTION = 1 1 1 * *
+
+# # per page record count
+# PER_PAGE_COUNT = 10
+
+# # start script =  pm2 start src/server.js --watch --name="/src" --ignore-watch="/src/uploads"
+# # test folder location = cd /var/www/testapi1_afghanpay.com
+
+# # etisalat rollback url
+# ETISALAT_ROLLBACK_API = 'http://172.31.2.15:3004/api/v1/etisalat/rollback'
+# ETISALAT_BALANCE_CHECK_API = 'http://172.31.2.15:3004/api/v1/etisalat/customer/balance'
+
+# # Rabbit mq worker
+# START_RABBIT_MQ_WORKER = 1
+
+# # node cron worker
+# START_NODE_CRON_WORKER = 1
+
+# # time out form sql query
+# SQL_QUERY_TIME_OUT = 60000
+
+# # wrong password attepmpts
+# WRONG_PASSWORD_ATTEMPTS = 5
+
+
+
+# ERS_511_BASE_URL = 'https://testapi1.afghan-pay.com/api/v1'
+
+# environment name
+NODE_ENV=prod
+
+# DB Configurations in ALEF Technology servers
+DB_HOST=172.28.28.101
+DB_HOST_READ_REPLICA=172.28.28.102
+DB_USER=root
+DB_PASS=AFP@#$Devel0per
+DB_DATABASE=afghanpaydb
 
 # local runtime configs
-PORT        = 5000
-SECRET_JWT  = supersecret
+PORT=5000
+SECRET_JWT=supersecret
 
 # redis Configurations
-REDIS_HOST     = 172.28.28.106
-REDIS_PORT     = 6379
-REDIS_PASS     = 
-REDIS_DB       = 
+REDIS_HOST=172.28.28.106
+REDIS_PORT=6379
+REDIS_PASS=
+REDIS_DB=
 
-#RabitMQ configuration vars
-RABBITMQ_HOST = 172.28.28.105
-RABBITMQ_PORT = 5672
-RABBITMQ_USER = myadmin
-RABBITMQ_PASS = myadmin 
+# RabbitMQ configuration vars
+RABBITMQ_HOST=172.28.28.105
+RABBITMQ_PORT=5672
+RABBITMQ_USER=myadmin
+RABBITMQ_PASS=myadmin
 
-# rabbitmq Configurations
-CLOUDAMQP_URL = amqp://myadmin:myadmin@172.28.28.105:5672/
+CLOUDAMQP_URL=amqp://myadmin:myadmin@172.28.28.105:5672/
 
-# admin defalt passwords
-ADMIN_DEFAULT_PASSWORD = 000000 
+# admin default passwords
+ADMIN_DEFAULT_PASSWORD=000000
 
-# admin defalt id and er_login_uuid
-USER_id = 1 
-USER_UUID = 5ad59565-cd7c-11 
+# admin default id and er_login_uuid
+USER_id=1
+USER_UUID=5ad59565-cd7c-11
 
-#agnet default operator and operator id
-operatorName = Salam
-operator_uuid = 1e0e1eeb-c2a6-11
+# agent default operator and operator id
+operatorName=Salam
+operator_uuid=1e0e1eeb-c2a6-11
 
-#session variables
-SESSION_TIME = 7d
+# session variables
+SESSION_TIME=7d
 
-#recharge time limit in min
-RECHARGE_TIME_LIMIT = 5 
+# recharge and stock transfer limits
+RECHARGE_TIME_LIMIT=5
+STOCK_TRANSFER_TIME_LIMIT=5
+EMONEY_TIME_LIMIT=15
+OTP_EXPIRATION_IN_MIN=60
+AGENT_NO_ACTIVITY=15
 
-#stock transfer time limit in min
-STOCK_TRANSFER_TIME_LIMIT = 5 
-
-# emoney time limit in min
-EMONEY_TIME_LIMIT = 15
-
-#otp expiration in minutes
-OTP_EXPIRATION_IN_MIN = 60 
-
-#Agent with no activity 15 days
-AGENT_NO_ACTIVITY = 15 
-
-#AWS variable
-# AWS_KEY = AKIAQECTNYAWS4F6HHAP
-# AWS_SECRET = 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
-# AWS_BUCKET = afptesting
-# AWS_PATH = https://afptesting.s3.amazonaws.com/
-
-#log url
-LOG_URL = http://localhost:5000 
+# log url
+LOG_URL=http://localhost:5000
 
 # console log sql query
-CONSOLE_LOG = 0
+CONSOLE_LOG=0
 
-# testing balacne for mno
-MNO_TEST_BALANCE = 0
+# testing balance for MNO
+MNO_TEST_BALANCE=0
 
 # USSD
-AFP_USSD_PASSWORD = *AFP*USSD*code#
+AFP_USSD_PASSWORD=*AFP*USSD*code#
 
-#other api password
-API_PASSWORD = AFP@API109user
+# other API password
+API_PASSWORD=AFP@API109user
 
-# P2A sesstion time 60 * 5 min
-P2A_SESSION_TIME = 300   
+# P2A session time 60*5 min
+P2A_SESSION_TIME=300
 
-# node cron deactiva agent in every 10 day if no activity found
-NODE_CRON_INACTIVE_AGENT_SCHADULE = 10 0 * * *
-
-# node cron deactive agent check date range
-NODE_CRON_INACTIVE_AGENT_DAY = 30
-
-# Reward distribution evey monty At 01:01 on day-of-month 1
-NODE_CRON_REWARD_DISTRIBUTION = 1 1 1 * *
+# Node cron schedules
+NODE_CRON_INACTIVE_AGENT_SCHADULE="10 0 * * *"
+NODE_CRON_INACTIVE_AGENT_DAY=30
+NODE_CRON_REWARD_DISTRIBUTION="1 1 1 * *"
 
 # per page record count
-PER_PAGE_COUNT = 10
+PER_PAGE_COUNT=10
 
-# start script =  pm2 start src/server.js --watch --name="/src" --ignore-watch="/src/uploads"
-# test folder location = cd /var/www/testapi1_afghanpay.com
+# Etisalat APIs
+ETISALAT_ROLLBACK_API=http://172.31.2.15:3004/api/v1/etisalat/rollback
+ETISALAT_BALANCE_CHECK_API=http://172.31.2.15:3004/api/v1/etisalat/customer/balance
 
-# etisalat rollback url
-ETISALAT_ROLLBACK_API = 'http://172.31.2.15:3004/api/v1/etisalat/rollback'
-ETISALAT_BALANCE_CHECK_API = 'http://172.31.2.15:3004/api/v1/etisalat/customer/balance'
+# RabbitMQ & Node cron workers
+START_RABBIT_MQ_WORKER=1
+START_NODE_CRON_WORKER=1
 
-# Rabbit mq worker
-START_RABBIT_MQ_WORKER = 1
+# SQL timeout
+SQL_QUERY_TIME_OUT=60000
 
-# node cron worker
-START_NODE_CRON_WORKER = 1
+# wrong password attempts
+WRONG_PASSWORD_ATTEMPTS=5
 
-# time out form sql query
-SQL_QUERY_TIME_OUT = 60000
-
-# wrong password attepmpts
-WRONG_PASSWORD_ATTEMPTS = 5
-
-
-
-ERS_511_BASE_URL = 'https://testapi1.afghan-pay.com/api/v1'
+# Base URL
+ERS_511_BASE_URL=https://testapi1.afghan-pay.com/api/v1
