--- a/.env
+++ b/.env
@@ -11,6 +11,11 @@ DB_USER=root
 DB_PASS=AFP@#$Devel0per
 DB_DATABASE=afghanpaydb
 
+# Database Connection Optimizations
+DB_CONNECTION_LIMIT=35
+DB_QUEUE_LIMIT=10000
+DB_ACQUIRE_TIMEOUT=20000
+
 # local runtime configs
 PORT=5000
 SECRET_JWT=supersecret
@@ -20,6 +25,11 @@ REDIS_HOST=172.28.28.106
 REDIS_PORT=6379
 REDIS_PASS=
 REDIS_DB=
+
+# Redis Optimizations for External Server
+REDIS_MAX_CLIENTS=100
+REDIS_CONNECT_TIMEOUT=10000
+REDIS_COMMAND_TIMEOUT=5000
 
 # RabbitMQ configuration vars
 RABBITMQ_HOST=172.28.28.105
@@ -92,3 +102,18 @@ WRONG_PASSWORD_ATTEMPTS=5
 
 # Base URL
 ERS_511_BASE_URL=https://testapi1.afghan-pay.com/api/v1
+
+
+# Application Performance Settings
+WORKER_COUNT=7
+REQUEST_TIMEOUT=15000
+JSON_LIMIT=5mb
+QUERY_TIMEOUT=15000
+
+# Cluster Settings
+CLUSTER_ENABLED=true
+CLUSTER_WORKERS=7
+
+# External Services Confirmation
+SERVICES_RABBITMQ_EXTERNAL=true
+SERVICES_REDIS_EXTERNAL=true
