--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
     "pro-cluster": "NODE_ENV=production node src/server.js",
     "start": "node src/server.js",
     "start-cluster": "NODE_ENV=production node src/server.js",
-    "test-performance": "npx autocannon -c 100 -d 30 http://localhost:5000/api"
+    "test-performance": "npx autocannon -c 100 -d 30 http://localhost:5000/api",
+    "load-test:quick": "node load-test-master.js --quick",
+    "load-test:full": "node load-test-master.js",
+    "load-test:stress": "node load-test-master.js --stress",
+    "load-test:cluster": "node load-test-master.js --cluster",
+    "load-test:rabbitmq": "node load-test-master.js --rabbitmq",
+    "test:performance": "npx autocannon -c 100 -d 30 http://localhost:5000/api/health"
   },
   "keywords": [],
   "author": "Exioms",
@@ -46,7 +52,7 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "autocannon": "^7.10.0",
+    "autocannon": "^7.15.0",
     "eslint": "^7.26.0",
     "nodemon": "^2.0.14"
   }
