some load test files are made to check the rechgarge end point

--- a/package.json
+++ b/package.json
@@ -12,12 +12,19 @@
     "start": "node src/server.js",
     "start-cluster": "NODE_ENV=production node src/server.js",
     "test-performance": "npx autocannon -c 100 -d 30 http://localhost:5000/api",
-    "load-test:quick": "node load-test-master.js --quick",
-    "load-test:full": "node load-test-master.js",
-    "load-test:stress": "node load-test-master.js --stress",
-    "load-test:cluster": "node load-test-master.js --cluster",
-    "load-test:rabbitmq": "node load-test-master.js --rabbitmq",
-    "test:performance": "npx autocannon -c 100 -d 30 http://localhost:5000/api/health"
+    "load-test:quick": "node src/load-test-master.js --quick",
+    "load-test:full": "node src/load-test-master.js",
+    "load-test:stress": "node src/load-test-master.js --stress",
+    "load-test:cluster": "node src/load-test-master.js --cluster",
+    "load-test:rabbitmq": "node src/load-test-master.js --rabbitmq",
+    "test:performance": "npx autocannon -c 100 -d 30 http://localhost:5000/api/health",
+    "load-test:etisalat": "node src/load-test-etisalat.js",
+    "load-test:etisalat-quick": "node src/load-test-etisalat.js --quick",
+    "load-test:etisalat-stress": "node src/load-test-etisalat.js --stress",
+    "load-test:5000rps": "node src/load-test-5000rps.js",
+    "load-test:1000rps": "node src/load-test-5000rps.js --quick",
+    "load-test:10000rps": "node src/load-test-5000rps.js --extreme",
+    "load-test:production": "NODE_ENV=production node src/load-test-5000rps.js"
   },
   "keywords": [],
   "author": "Exioms",
