made loaded testing on the rechage API system is able to hhundle 1245 RPS by using 8 node processor and enhanced the server.js file to run 8 node processer when its runned

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,11 @@
 # Snyk Security Extension - AI Rules (auto-generated)
 .github/instructions/snyk_rules.instructions.md
 /src/testCompany
+/src/testCompany.js
+/src/testConnections.js
+/src/testStatusCompany.js
+/src/load-test-etisalat.js
+/the_topup_report
+.the_topup_report
+/bulk_topup_report
+.bulk_topup_report
