in this stage we added role  to Agents, Sub-admin and Admin  if they do not do any activity within 15 minutes his account would be loged out, and need to login again

--- a/.env
+++ b/.env
@@ -51,7 +51,7 @@ operatorName=Salam
 operator_uuid=1e0e1eeb-c2a6-11
 
 # session variables
-SESSION_TIME=7d
+SESSION_TIME=1d
 
 # recharge and stock transfer limits
 RECHARGE_TIME_LIMIT=5
@@ -118,3 +118,7 @@ CLUSTER_WORKERS=7
 # External Services Confirmation
 SERVICES_RABBITMQ_EXTERNAL=true
 SERVICES_REDIS_EXTERNAL=true
+
+
+
+SESSION_IDLE_TIME=900
