.env.dev is created , and also in the addmin Stock Trasfar Report file name the Start_date and end_date added, and on the package.json file for dev run dev-srver.js is added

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/server.js",
   "scripts": {
     "local": "set NODE_ENV=local&& nodemon src/server.js",
-    "dev": "NODE_ENV=development pm2 start src/server.js --watch 'src/' --ignore-watch 'src/uploads'",
+    "dev": "NODE_ENV=development pm2 start src/dev-server.js --watch 'src/' --ignore-watch 'src/uploads'",
     "stage": "NODE_ENV=stage pm2 start src/server.js --watch 'src/' --ignore-watch 'src/uploads'",
     "pro": "NODE_ENV=production pm2 start src/server.js",
     "pro-cluster": "NODE_ENV=production node src/server.js",
